--- a/makeup.html
+++ b/makeup.html
@@ -2,10 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Girls helper</title>
-    <link rel="stylesheet" href="makestyle.css">
+    <title>Makeup</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script src="script.js"></script>
+    <div class="corner-indicator">
+        <div class="vertical-bar glow"></div>
+        <div class="horizontal-bar glow"></div>
+    </div>
+
+    <div class="corner-indicator2">
+        <div class="vertical-bar glow"></div>
+        <div class="horizontal-bar glow"></div>
+    </div>
+
+    <div class="corner-indicator3">
+        <div class="vertical-bar glow"></div>
+        <div class="horizontal-bar glow"></div>
+    </div>
+
+    <div class="corner-indicator4">
+        <div class="vertical-bar glow"></div>
+        <div class="horizontal-bar glow"></div>
+    </div>
+
+    <script src="Makescript.js"></script>
 </body>
 </html>
